2004-11-11  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b269

	* Fix: fitToWindow failed on PHP where . was not in includepath.

2004-11-09  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b268

	* Fix: Only try to send email after saving album data, when email is activated.
	       This prevents an errormessage when creating album with debugmode on.
	  TODO: better way of debug output.

2004-11-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b267

	* Change: Refine the search regex to be faster and more accurate

2004-11-08  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b266

	* Fix 1061778: Tiny typo

	* Fix 1062609: ImageMagick 6.1.0+ switched its parameters again,
	  we're now going to have to require users to specify which version
	  that they're using.

2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b265

	* Fix 973081: Add some complicated regex to search.php to prevent
	  our highlight routines from breaking URLs when a portion of the
	  href matches the searchstring.  Still can be enhanced to work with
	  non-<a> cases.

2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b264

	* Fix: Don't display rss.php in offline mode

2004-11-05  Beckett Madden-Woods  <beckett@beckettmw.com> 1.5-cvs-b263

	* captionator.php: fix photos-per-page count to work with
	  register_globals off, and also when linked to from
	  albums.php

2004-11-04  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b262

	* Text: Update the Mambo HowTo.txt

	* Fix: Integrate the relavent portions of 1.4.4-pl3/4

2004-11-03  Beckett Madden-Woods  <beckett@beckettmw.com> 1.5-cvs-b261

	* Edit grammar in do_command.php (modifying text string).

2004-11-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b260

	* Fix: Uploading compressed files were broken due to wrong test.

	* Change: Lower extension when testing supported tool.

2004-10-31  John Kirkland <jpk@bl.org>  1.5-cvs-b259

	* Change:  Fix XP Publishing Wizard with register globals off.
